@startuml

title __QAINFOMATE's Class Diagram__\n

  namespace com.example.qainfomate {
    class com.example.qainfomate.View.MainActivity {
        - btnLogin : Button
        - email : EditText
        - fbAuth : FirebaseAuth
        - pass : EditText
        - register : TextView
        # onCreate()
    }
  }
  

  namespace com.example.qainfomate {
    class com.example.qainfomate.View.Register {
        - btnReg : Button
        - check1 : String
        - check2 : String
        - confpass : EditText
        - dbref : DatabaseReference
        - em : EditText
        - fbAuth : FirebaseAuth
        - fn : EditText
        - pass : EditText
        - sn : EditText
        - stuID : EditText
        - tvLogin : TextView
        # onCreate()
        # onStart()
    }
  }
  

  namespace com.example.qainfomate {
    class com.example.qainfomate.Models.User {
        - email : String
        - fname : String
        - password : String
        - sname : String
        - stuID : String
        + User()
        + User()
        + getFname()
        + getSname()
        + getStuID()
        + setFname()
        + setSname()
        + setStuID()
    }
  }
  

  com.example.qainfomate.View.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.qainfomate.View.Register -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
